# ai-ime

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  START_HERE.cmd  pyproject.toml  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
.omx/plans/: ai-ime-project-blueprint.md
ai_ime/: __init__.py  analysis_scheduler.py  app.py  cli.py  config.py  db.py  doctor.py  icons.py  learning.py  listener.py  logging_utils.py  models.py  onboarding.py  runtime.py  settings.py  settings_window.py  setup_wizard.py  shortcut.py  signals.py  startup.py  text_capture.py  tray.py  ui_api.py
ai_ime/assets/: __init__.py
ai_ime/correction/: __init__.py  detector.py  normalize.py  rules.py
ai_ime/providers/: __init__.py  base.py  http.py  mock.py  ollama.py  openai_compatible.py  presets.py  prompt.py  schema.py
ai_ime/rime/: __init__.py  deploy.py  generator.py  paths.py  weasel.py
ai_ime/ui/: settings.css  settings.html  settings.js
docs/: ai-ime-plan.md  architecture.md  manual-acceptance.md  privacy.md  quickstart-windows.md  release.md
packaging/pyinstaller/: ai-ime.spec
scripts/: bootstrap.ps1  build-release.ps1
tests/: test_analysis_scheduler.py  test_app.py  test_config.py  test_db.py  test_detector.py  test_doctor.py  test_learning.py  test_listener.py  test_logging_utils.py  test_package_resources.py  test_provider_presets.py  test_providers_http.py  test_providers_schema.py  test_rime_deploy.py  test_rime_generator.py  test_rime_paths.py  test_rime_weasel.py  test_rules.py  test_runtime.py  test_settings.py  test_settings_window.py  test_setup_wizard.py  test_shortcut.py  test_startup.py  test_text_capture.py  test_ui_api.py
