[project]
name = "ai-ime"
version = "0.1.0"
description = "Personal pinyin typo learning helper for Rime on Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyboard>=0.13.5",
]

[project.scripts]
ai-ime = "ai_ime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_ime"]
