[project]
name = "ai-ime"
version = "0.1.0"
description = "Personal pinyin typo learning helper for Rime on Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyboard>=0.13.5",
    "pillow>=12.2.0",
    "pystray>=0.19.5",
    "pywebview>=6.2.1",
]

[project.scripts]
ai-ime = "ai_ime.cli:main"
ai-ime-start = "ai_ime.app:main"
ai-ime-tray = "ai_ime.tray:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_ime"]
