[project]
name = "ai-ime"
version = "0.1.0"
description = "Personal pinyin typo learning helper for Rime on Windows"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "AI IME contributors" },
]
keywords = ["ime", "rime", "windows", "pinyin", "autocorrect", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "keyboard>=0.13.5",
    "pillow>=12.2.0",
    "pystray>=0.19.5",
    "pywebview>=6.2.1",
    "uiautomation>=2.0.29",
]

[project.scripts]
ai-ime = "ai_ime.cli:main"
ai-ime-start = "ai_ime.app:main"
ai-ime-tray = "ai_ime.tray:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_ime"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
